# AI-OpenGL-Renderer

./: .gitignore  CMakeLists.txt  README.md
bootstrap/: clone_dependencies.py  dependencies.json
shaders/: fragment_shader.glsl  post_processing_fragment.glsl  post_processing_vertex.glsl  vertex_shader.glsl
src/: main.cpp
